test_regress/t/t_for_comma_bad.out
%Error: t/t_for_comma_bad.v:13: Unsupported: for loop step after the first comma
      for (; ; a=a+1, b=b+1) ;
               ^
%Error: t/t_for_comma_bad.v:16: Unsupported: for loop step after the first comma
      for (; a<1; a=a+1, b=b+1) ;
                  ^
%Error: t/t_for_comma_bad.v:19: Unsupported: for loop step after the first comma
      for (a=0; a<1; a=a+1, b=b+1) ;
                     ^
%Error: t/t_for_comma_bad.v:22: Unsupported: for loop step after the first comma
      for (integer a=0; a<1; a=a+1, b=b+1) ;
                             ^
%Error: t/t_for_comma_bad.v:25: Unsupported: for loop step after the first comma
      for (var integer a=0; a<1; a=a+1, b=b+1) ;
                                 ^
%Error: t/t_for_comma_bad.v:26: Unsupported: for loop initialization after the first comma
      for (integer a=0, integer b=0; a<1; ) ;
                      ^
%Error: t/t_for_comma_bad.v:27: Unsupported: for loop initialization after the first comma
      for (integer a=0, integer b=0; a<1; a=a+1) ;
                      ^
%Error: t/t_for_comma_bad.v:28: Unsupported: for loop initialization after the first comma
      for (integer a=0, integer b=0; a<1; a=a+1, b=b+1) ;
                      ^
%Error: t/t_for_comma_bad.v:28: Unsupported: for loop step after the first comma
      for (integer a=0, integer b=0; a<1; a=a+1, b=b+1) ;
                                          ^
%Error: Exiting due to
